...
  <string name="settings_numerals_tamil">Tamil (௦௧௨௩)</string>
  <!-- Weekday name Saturday, used to choose the week start and weekend. -->
  <string name="settings_weekday_saturday">Saturday</string>
  <!-- Weekday name Sunday, used to choose the week start and weekend. -->
  <string name="settings_weekday_sunday">Sunday</string>
  <!-- Weekday name Monday, used to choose the week start and weekend. -->
  <string name="settings_weekday_monday">Monday</string>
  <!-- Weekday name Tuesday, used to choose the week start and weekend. -->
  <string name="settings_weekday_tuesday">Tuesday</string>
  <!-- Weekday name Wednesday, used to choose the week start and weekend. -->
  <string name="settings_weekday_wednesday">Wednesday</string>
  <!-- Weekday name Thursday, used to choose the week start and weekend. -->
  <string name="settings_weekday_thursday">Thursday</string>
...
